--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     color:white;
     font-family:verdana;
     text-align:center;
+    background-color:powder-blue;
   }
   
   
@@ -9,6 +10,7 @@
     color:white;
     font-family:verdana;
     text-align:center;
+    background-color:tomato;
   }
   
   
