--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
     color:white;
     font-family:verdana;
     text-align:center;
-    background-color:powder-blue;
   }
   
   
@@ -10,7 +9,7 @@
     color:white;
     font-family:verdana;
     text-align:center;
-    background-color:tomato;
+    background-color:black;
   }
   
   
