--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image:url("fdcp-bg.jpg");
+  background-image:url("https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/fdcp-bg.jpg");
   background-repeat:no-repeat;
   background-attachment:fixed;
 }
