--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
-  background-image:url("https://eggofglory999.github.io/Free-Daily-Chess-Puzzles/fdcp-bg.jpg");
+  background-image:url("ezgif.com-gif-maker (1).gif");
   background-attachment:fixed;
-  background-size:contain;
 }
 
 h1 {
@@ -15,7 +14,6 @@ h1 {
     color:white;
     font-family:verdana;
     text-align:center;
-    background-color:black;
   }
   
 
@@ -23,7 +21,6 @@ h1 {
     color:white;
     font-family:verdana;
     text-align:center;
-    background-color:black;
   }
   
   
